Bug 41883 - [4.5 Regression] ICE from '-O -fprofile-arcs -fsched2-use-superblocks -ftree-vrp -fschedule-insns2 -freorder-blocks'
Summary: [4.5 Regression] ICE from '-O -fprofile-arcs -fsched2-use-superblocks -ftree...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.5.0
: P2 normal
Target Milestone: 4.5.0
Assignee: Richard Henderson
URL:
Keywords: ice-on-valid-code
: 41889 42396 (view as bug list)
Depends on:
Blocks: 42396
  Show dependency treegraph
 
Reported: 2009-10-30 22:46 UTC by Bake Timmons
Modified: 2010-01-06 18:48 UTC (History)
4 users (show)

See Also:
Host: x86_64-unknown-linux-gnu
Target: x86_64-unknown-linux-gnu
Build: x86_64-unknown-linux-gnu
Known to work: 4.3.3
Known to fail:
Last reconfirmed: 2010-01-06 18:24:22


Attachments
gzipped preprocessed source triggering failure (35.47 KB, application/gzip)
2009-10-30 22:48 UTC, Bake Timmons
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bake Timmons 2009-10-30 22:46:11 UTC
gcc -B. -r -nostdlib extension.i -v -Wall -Wextra -O  -fprofile-arcs -fsched2-use-superblocks -ftree-vrp -fschedule-insns2 -freorder-blocks
Using built-in specs.
COLLECT_GCC=gcc
COLLECT_LTO_WRAPPER=/usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.5.0/lto-wrapper
Target: x86_64-unknown-linux-gnu
Configured with: /home/b3po/build/gcc/gcc/configure --with-mpfr=/usr/local --with-gmp=/usr/local --with-ppl=/usr/local --with-cloog=/usr/local --with-mpc=/usr/local --with-libelf=/usr/local --enable-languages=c,c++ --enable-__cxa_atexit --enable-targets=all
Thread model: posix
gcc version 4.5.0 20091028 (experimental) (GCC)
COLLECT_GCC_OPTIONS='-B.' '-r' '-nostdlib' '-v' '-Wall' '-Wextra' '-O' '-fprofile-arcs' '-fsched2-use-superblocks' '-ftree-vrp' '-fschedule-insns2' '-freorder-blocks' '-mtune=generic'
 /usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.5.0/cc1 -fpreprocessed extension.i -quiet -dumpbase extension.i -mtune=generic -auxbase extension -O -Wall -Wextra -version -fprofile-arcs -fsched2-use-superblocks -ftree-vrp -fschedule-insns2 -freorder-blocks -o /tmp/cc2sEsCc.s
GNU C (GCC) version 4.5.0 20091028 (experimental) (x86_64-unknown-linux-gnu)   
        compiled by GNU C version 4.5.0 20091028 (experimental), GMP version 4.3.1, MPFR version 2.4.1, MPC version 0.7
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
GNU C (GCC) version 4.5.0 20091028 (experimental) (x86_64-unknown-linux-gnu)
        compiled by GNU C version 4.5.0 20091028 (experimental), GMP version 4.3
.1, MPFR version 2.4.1, MPC version 0.7
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
Compiler executable checksum: c30658ecf2032071e4fe041bf17f02de
extension.c: In function ‘FindExtension’:
extension.c:206:16: warning: comparison between signed and unsigned integer expressions
extension.c:208:35: warning: comparison between signed and unsigned integer expressions
extension.c:213:45: warning: comparison between signed and unsigned integer expressions
extension.c:219:16: warning: comparison between signed and unsigned integer expressions
extension.c: In function ‘GetExtensionEntry’:
extension.c:247:15: warning: comparison between signed and unsigned integer expressions
extension.c: In function ‘ProcListExtensions’:
extension.c:353:20: warning: comparison between signed and unsigned integer expressions
extension.c:368:20: warning: comparison between signed and unsigned integer expressions
extension.c:392:1: internal compiler error: in dwarf2out_frame_debug_adjust_cfa, at dwarf2out.c:1859
Comment 1 Bake Timmons 2009-10-30 22:48:50 UTC
Created attachment 18935 [details]
gzipped preprocessed source triggering failure
Comment 2 Volker Reichelt 2009-11-20 12:23:28 UTC
Confirmed. Reduced testcase (crashes with "-fprofile-arcs
-fsched2-use-superblocks -fschedule-insns2 -freorder-blocks -O"):

================================
int foo(int i)
{
  if (i)
    return 0;
  __builtin_alloca(4);
  return 0;
}
================================
Comment 3 H.J. Lu 2009-12-27 21:34:35 UTC
This is caused by revision 147995:

http://gcc.gnu.org/ml/gcc-cvs/2009-05/msg00974.html
Comment 4 Richard Henderson 2010-01-06 18:23:47 UTC
*** Bug 41889 has been marked as a duplicate of this bug. ***
Comment 5 Richard Henderson 2010-01-06 18:24:48 UTC
*** Bug 42396 has been marked as a duplicate of this bug. ***
Comment 6 Richard Henderson 2010-01-06 18:34:45 UTC
Subject: Bug 41883

Author: rth
Date: Wed Jan  6 18:34:31 2010
New Revision: 155680

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=155680
Log:
	PR middle-end/41883
	* haifa-sched.c (add_to_note_list): Merge into ...
	(concat_note_lists): ... here, and ...
	(unlink_other_notes, rm_other_notes): Merge into...
	(remove_notes): ... here.  Create REG_SAVE_NOTEs for
	NOTE_INSN_EPILOGUE_BEG.

Added:
    trunk/gcc/testsuite/gcc.dg/pr42396.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/haifa-sched.c

Comment 7 Richard Henderson 2010-01-06 18:48:31 UTC
Fixed.